// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <header
    class="css-17ouny1"
  >
    <div
      class="_rightNav_9ej0w_15"
    >
      <a
        class="_wrap_1y6kl_1 _appName_9ej0w_1"
        href="/"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_9ej0w_14"
    >
      <a
        class="_wrap_1y6kl_1 _menuItem_9ej0w_20"
        href="/account"
      >
        Account
      </a>
    </div>
  </header>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <header
    class="css-17ouny1"
  >
    <div
      class="_rightNav_9ej0w_15"
    >
      <a
        class="_wrap_1y6kl_1 _appName_9ej0w_1"
        href="/"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_9ej0w_14"
    >
      <button
        class=" css-hcwumx"
        data-testid="button"
        type="button"
      >
        Get Started
      </button>
    </div>
  </header>
</div>
`;
